# happyrobot

./: .gitignore  README.md
qa/: 40_run.py  (+9 more)
tms-adapter/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tms-adapter/app/: config.py  deps.py  logging.py  main.py  mappers.py  schemas.py
tms-adapter/app/routers/: bookings.py  carriers.py  debug.py  health.py  loads.py  offers.py  otp.py
tms-adapter/app/services/: ceiling.py  fmcsa.py  otp_store.py  phone.py  sms.py
tms-adapter/app/tms/: client.py  commands.py  errors.py  faults.py  framing.py  widths.py
tms-adapter/infra/: railway.json
tms-adapter/scripts/: sweep.py
tms-adapter/tests/: conftest.py  test_ceiling.py  test_client.py  test_commands.py  test_config.py  test_faults.py  test_fmcsa.py  test_framing.py  test_logging.py  test_otp.py  test_routers_bookings.py  test_routers_carriers.py  test_routers_debug.py  test_routers_health.py  test_routers_loads.py  test_routers_offers.py  test_routers_otp.py  test_sms.py  test_validation.py  test_widths.py
tms-adapter/tests/fake_tms/: server.py
tms-adapter/tests/fixtures/transcripts/: SWEEP_SUMMARY.md  loadget_LD00238.txt  loadget_LD00269.txt  loadget_LD00271.txt  loadget_LD00280.txt  loadget_LD00285.txt  query_orig_AL.txt  query_orig_AR.txt  query_orig_CA.txt  query_orig_CO.txt  query_orig_FL.txt  query_orig_HI.txt  query_orig_IA.txt  query_orig_IN.txt  query_orig_KY.txt  query_orig_MD.txt  query_orig_MN.txt  query_orig_MO.txt  query_orig_NC.txt  query_orig_ND.txt  query_orig_NM.txt  query_orig_NY.txt  query_orig_OH.txt  (+9 more)
(+61 files in other folders)
